Youtube chat listener

--- a/widgets/chat/chat.html
+++ b/widgets/chat/chat.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div
-      style="background-color: #121216"
+      style="background-color: #121216f0"
       id="chat"
       class="scrollbar-hidden w-[300px] h-[400px] overflow-y-auto text-white p-3 font-sans"
     ></div>
